*** 20011008_4 by lusky
- revved patchlevel to 6.2.1rc1
- gutted the internal dns cache, BIND does a better job
- fixed compile error in last commit


*** 20011008_3 by db
- fixed another potential bug.



*** 20011008_2 by db
IP I lines should also check username



*** 20011008_1 by db
- fix for spoofing bug



*** 20010925_1 by lusky
- moved TS5 to main config section, enabled by default
- revved patchlevel to 6.2


*** 20010829_1 by lusky
- Fix for messages_cust.tab dependencies (wc)
- Fix for oper modes from conf (wc)
- made IGNORE_BOGUS_TS undef by default for now



*** 20010811_2 by lusky
- revved patchlevel to 6.2rc1


*** 20010811_1 by lusky
- made TS5 undef'd by default for this RC



*** 20010810_4 by leeh
- if a channel is unjuped and is empty, destroy it


*** 20010810_3 by leeh
- cleanup of serveropts, as per dracus' patch


*** 20010810_2 by leeh
- added documentation for TS5


*** 20010810_1 by leeh
- wrapped TS5 in #ifdef's
  I need to add doc/ts5.txt later


*** 20010806_2 by leeh
- added a special case exception for juped channels.
  if the channel is juped, and has no users, always use the incoming TS,
  even if its older, else if a channel is juped on a hub, youll get a TS
  desync


*** 20010806_1 by wcampbel
Corrected typos (from dracus)


*** 20010805_9 by db
- make NON_REDUNDANT_KLINES always on, removed #define for it



*** 20010805_8 by leeh
- removed some debugging symbols


*** 20010805_7 by leeh
- dont allow duplicate IP klines


*** 20010805_6 by leeh
- fixed unkline to remove tkline ips


*** 20010805_5 by jdc
- Minor cleanups.


*** 20010805_4 by jdc
- Pure cosmetical changes; "#undef " became "#undef  ", removed excessive
  whitespace from end of lines, and minor definition changes.


*** 20010805_3 by leeh
- moved reason = parv[2]; up a step


*** 20010805_2 by jdc
- Removed unused variables in m_gline().
- Extra () to define truth in invalid_wildcard().
- Renamed 'local' to 'local_client' to avoid shadowing in invalid_gline().
