@@ -1,3 +1,9 @@
+*** 20011011_1 by db
+We have to have to have to make sure the config.h is sane, EFNet admins are
+lazy.
+
+
+
 *** 20011008_4 by lusky
 - revved patchlevel to 6.2.1rc1
 - gutted the internal dns cache, BIND does a better job
